[gd_scene load_steps=2 format=3 uid="uid://c7krb3fe2qkik"]

[ext_resource type="Script" path="res://partner_shadowplay.gd" id="1_tpxlu"]

[node name="partner_shadowplay" type="Node2D"]
script = ExtResource("1_tpxlu")

[node name="back_half_buttons" type="BoxContainer" parent="."]
offset_left = 125.0
offset_top = 400.0
offset_right = 292.0
offset_bottom = 536.0
alignment = 1
vertical = true

[node name="bear_button_back" type="Button" parent="back_half_buttons"]
layout_mode = 2
text = "Bear"
flat = true

[node name="elephant_button_back" type="Button" parent="back_half_buttons"]
layout_mode = 2
text = "Elephant"
flat = true

[node name="cat_button_back" type="Button" parent="back_half_buttons"]
layout_mode = 2
text = "Cat"
flat = true

[node name="front_half_buttons" type="BoxContainer" parent="."]
offset_left = 850.0
offset_top = 400.0
offset_right = 1017.0
offset_bottom = 536.0
alignment = 1
vertical = true

[node name="bear_button_front" type="Button" parent="front_half_buttons"]
layout_mode = 2
text = "Bear"
flat = true

[node name="elephant_button_front" type="Button" parent="front_half_buttons"]
layout_mode = 2
text = "Elephant"
flat = true

[node name="cat_button_front" type="Button" parent="front_half_buttons"]
layout_mode = 2
text = "Cat"
flat = true

[node name="ok_button" type="Button" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.479167
anchor_top = 0.850309
anchor_right = 0.506076
anchor_bottom = 0.898148
offset_left = 509.0
offset_top = 555.0
offset_right = 540.0
offset_bottom = 586.0
grow_horizontal = 2
grow_vertical = 0
text = "OK"
flat = true
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="back_half_buttons/bear_button_back" to="." method="_on_bear_button_back_pressed"]
[connection signal="pressed" from="back_half_buttons/elephant_button_back" to="." method="_on_elephant_button_back_pressed"]
[connection signal="pressed" from="back_half_buttons/cat_button_back" to="." method="_on_cat_button_back_pressed"]
[connection signal="pressed" from="front_half_buttons/bear_button_front" to="." method="_on_bear_button_front_pressed"]
[connection signal="pressed" from="front_half_buttons/elephant_button_front" to="." method="_on_elephant_button_front_pressed"]
[connection signal="pressed" from="front_half_buttons/cat_button_front" to="." method="_on_cat_button_front_pressed"]
[connection signal="pressed" from="ok_button" to="." method="_on_ok_button_pressed"]
